Fix flickering on loading of widget

--- a/src/css/layouts/relative.scss
+++ b/src/css/layouts/relative.scss
@@ -2,6 +2,8 @@
 .App {
   &.relative {
     .chat {
+      max-width: 900px;
+
       .nav-bar {
         width: 100%;
         max-width: 800px;
@@ -12,6 +14,8 @@
         position: relative;
         bottom: 0;
         float: left;
+        width: 100%;
+
 
         .app-tab {
           height: 500px;
